src/test/ui/nll/closure-requirements/region-lbr-named-does-not-outlive-static.stderr
error: lifetime may not live long enough
  --> $DIR/region-lbr-named-does-not-outlive-static.rs:9:5
   |
LL | fn foo<'a>(x: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
LL |     &*x
   |     ^^^ returning this value requires that `'a` must outlive `'static`

help: the following changes may resolve your lifetime errors
   |
   = help: replace `'a` with `'static`

error: aborting due to previous error

